--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ urls:
     - text: Podcast    
       url: https://www.hack-the-planet.tv
     - text: YouTube 
-      url: https://www.youtube.com/c/andreasheil
+      url: https://www.youtube.com/c/andreasheil    
 #    - text: Gallery
 #      url: /gallery
 #    - text: Shop
@@ -32,11 +32,11 @@ urls:
 
 author_logo: profile.png
 author: Andreas Heil
-author_bio: Hi, ich bin Andreas Heil, Professor für Software Engineering am Tag, Coder, Geek und Nerd bei Nacht.
+author_bio: Über die Jahre konnte ich unter Nutzung aktuellster Ansätze beim Aufbau neuer erfolgreicher Produkt-Teams als auch der Transformation existierender exzellenter Produkt-Teams in noch bessere Produkt-Teams unterstützen. <br/ >Über zwei Jahrzehnte Erfahrung als Software-Entwickler, Architekt, Entwicklungsleiter und Produktmanager ermöglichend hierbei einen ganzheitlichen Blick auf die Entwicklung und den Betrieb moderner Software-Architekturen.
 author_email: "info@aheil.de"
-author_location: Heilbronn, Deutschland
+author_location: Heilbronn, Deutschland 
 author_website_url: "https://www.aheil.de"
-typewrite-text: Hi, ich bin Andreas Heil, Professor für Software Engineering am Tag, Coder, Geek und Nerd bei Nacht.
+typewrite-text: Hi, ich bin Andreas Heil, Professor für Software Engineering am Tag, Coder, Geek und Nerd bei Nacht1.
 
 # Experiences
 author_work_experiences:
@@ -90,10 +90,10 @@ linkedin_username: aheil
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
 # disqus_shortname: sujay-kundu
-hyvor_talk_website_id: 476
+# hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
-wakatime_username: sujaykundu777
+# wakatime_username: sujaykundu777
 
 # mailchimp embedded form url (newsletter):
 mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
