added insta link to profile

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ github_username:  aheil
 orcid_id: 0000-0002-7819-4656
 linkedin_username: aheil
 #behance_username: johndoe
-#instagram_username: johndoe
+instagram_username: aheil
 #medium_username: johndoe
 #telegram_username: johndoe
 #dribbble_username: johndoe
