changed typewrite script

--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,8 @@ author_bio: Über die Jahre konnte ich unter Nutzung aktuellster Ansätze beim A
 author_email: "info@aheil.de"
 author_location: Heilbronn, Deutschland 
 author_website_url: "https://www.aheil.de"
-typewrite-text: Hi, ich bin Andreas Heil, Professor für Software Engineering am Tag, Coder, Geek und Nerd bei Nacht1.
+typewrite-text: Hi, ich bin Andreas Heil, Professor für Software Engineering.
+typewrite-text-rewrite: Coder, Geek und Nerd.
 
 # Experiences
 author_work_experiences:
