--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ urls:
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: profile.png
+author_logo: profile.webp
 author: Andreas Heil
 author_bio: Über die Jahre konnte ich unter Nutzung aktuellster Ansätze beim Aufbau neuer erfolgreicher Produkt-Teams als auch der Transformation existierender exzellenter Produkt-Teams in noch bessere Produkt-Teams unterstützen. <br/ >Über zwei Jahrzehnte Erfahrung als Software-Entwickler, Architekt, Entwicklungsleiter und Produktmanager ermöglichend hierbei einen ganzheitlichen Blick auf die Entwicklung und den Betrieb moderner Software-Architekturen.
 author_email: "info@aheil.de"
