--- a/_config.yml
+++ b/_config.yml
@@ -1,188 +1,90 @@
-title: Andreas Heil
-subtitle: Professor für Software Engineering
-description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
+### Site Settings ###
+title               : aheilde 
+description         : >-
+                      I turn coffee :coffee: into code,
+                      use tabs over spaces
+                      and never broke production.
+baseurl             : ""                                # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
+repository          : aheil/aheil.github.io             # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
+remote_theme        : YoussefRaafatNasry/portfolYOU
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
-baseurl: "" # the subpath of your site, e.g. /blog
 
-urls:
-    - text: Home
-      url: /
-    - text: Über mich
-      url: /about
-    - text: Blog
-      url: /blog
-    - text: Podcast <i class="fas fa-link"></i>
-      url: https://www.hack-the-planet.tv
-    - text: YouTube <i class="fas fa-link"></i>
-      url: https://www.youtube.com/c/andreasheil 
-    - text: Lehre & Forschung <i class="fas fa-link"></i>
-      url: https://prof.aheil.de
-#    - text: Gallery
-#      url: /gallery
-#    - text: Shop
-#      url : /shop
-#    - text: Contact
-#      url : /contact
-#    - text: Styleguide
-#      url: /styleguide
-#    - text: Get Started
-#      url: /get-started
-
-# Edit Author details (For multi authors check _data/authors.yml)
-
-author_logo: profile.webp
-author: Andreas Heil
-author_bio: Über die Jahre konnte ich unter Nutzung aktuellster Ansätze beim Aufbau neuer erfolgreicher Produkt-Teams als auch der Transformation existierender exzellenter Produkt-Teams in noch bessere Produkt-Teams unterstützen. <br/ >Über zwei Jahrzehnte Erfahrung als Software-Entwickler, Architekt, Entwicklungsleiter und Produktmanager ermöglichend hierbei einen ganzheitlichen Blick auf die Entwicklung und den Betrieb moderner Software-Architekturen.
-author_email: "info@aheil.de"
-author_location: Heilbronn, Deutschland 
-author_website_url: "https://www.aheil.de"
-typewrite-text: Hi, ich bin Andreas Heil, Professor für Software Engineering.
-typewrite-text-rewrite: Coder, Geek und Nerd.
-
-# Experiences
-author_work_experiences:
-            - company_name: Google
-              company_logo: google.png
-              company_url: https://google.com
-              designation: Software Engineer
-              description: Worked on various Google Products
-              visibility: true
-            - company_name: Microsoft
-              company_logo: microsoft.png
-              company_url: https://microsoft.com
-              designation: Azure Developer
-              description: Worked on various Azure Cloud Products
-              visibility: true
-
-# Education
-author_education_details:
-              - college_logo: mit.png
-                college_name: MIT
-                college_url: https://mit.org
-                college_degree: CS Engineer
-                description: Bachelor of Technology
-                visibility: true
-
-# Projects
-author_project_details:
-              - project_thumbnail: gamershub.png
-                project_title: Gamers Hub
-                project_description: A Platform built for Gamers and Game Devs
-                project_url: https://gamershub.in
-                visibility: true
-              - project_thumbnail: hack4r.PNG
-                project_title: Hack4r
-                project_description: A Platform built for Hackers and Penetration Testers
-                project_url: https://hack4r.com
-                visibility: true
-
-# social links
-twitter_username: aheil
-github_username:  aheil
-#facebook_username: johndoe
-orcid_id: 0000-0002-7819-4656
-linkedin_username: aheil
-#behance_username: johndoe
-instagram_username: aheil
-#medium_username: johndoe
-#telegram_username: johndoe
-#dribbble_username: johndoe
-#flickr_username: johndoe
-
-#for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
-
-# disqus_shortname: sujay-kundu
-# hyvor_talk_website_id: 476
-
-# wakatime username (coding activity)
-# wakatime_username: sujaykundu777
-
-# mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
-
-# formspree (contact form)
-formspree_email: johndoe@gmail.com
-
-# syntax highlighter
-markdown: kramdown
-highlighter: rouge
-permalink: pretty
-
-# Choose what to show ( can be true or false)
-show_author_work_experiences: false
-show_author_education_details: false
-show_author_project_details: false
-
-# pagination of posts
-paginate: 4
-per_page: 4
-paginate_path: "/blog/page/:num/"
-
-# minify
-# compress_html:
-#   clippings: all
-#   comments: ["<!-- ", " -->"]
-#   endings: all
-#   ignore:
-#     envs: ['development']
-
-# Archives
-# jekyll-archives:
-#   enabled:
-#     - categories
-#   layout: archive
-#   permalinks:
-#     category: '/category/:name/'
-
-collections:
-  products:
-    output: true
-  authors:
-    output: true
-
-defaults:
-  -
-    scope:
-      path: "gallery"
-    values:
-      permalink: /:path/:basename:output_ext
-  -
-    scope:
-      path: ""
-      type: authors
-    values:
-      layout: author
-      permalink: /blog/authors/:slug
-
-# Build settings
+### Plugins ###
 plugins:
-  - jekyll-paginate
-  - jekyll-gist
-  - jekyll-seo-tag
-  - jekyll-sitemap
-  - jekyll-menus
+  - jemoji
 
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
+### Navbar Settings ###
+nav_exclude:                                            # The following paths are excluded from navbar
+  - pages/tags.html
+  - pages/404.html
+  - pages/index.md
+
+
+### Author Info ###
+author:
+  name              : Andreas Heil
+  image             : aheil.jpg
+  behance           : your_username
+# dribbble          : your_username
+  email             : inf@aheil.de
+#  facebook          : your_username
+  github            : aheil
+# gitlab            : your_username
+ instagram         : aheil
+# kaggle            : your_username
+  linkedin          : your_username
+  medium            : your_username
+# soundcloud        : your_username
+# spotify           : your_username
+# stackoverflow     : your_user_id
+# tumblr            : your_username.tumblr.com
+ twitch            : profaheil
+ twitter           : aheil
+# vimeo             : your_username
+# youtube           : your_channel_name
+# keybase           : your_username
+
+
+### Posts ###
+permalink: /blog/:title
+
+
+### Collections ###
+collections:
+  projects:
+    output: true
+    permalink: /projects/:name
+
+
+### Disqus ###
+disqus:
+  shortname: your-short-name-disqus                     # Your website Shortname on disqus
+
+
+### Analytics ###
+analytics:
+  enabled: false                                        # Set true to enable analytics
+  google:
+    tracking_id: your-google-tracking-id
+
+
+### Defaults for collections ###
+defaults:
+  - scope:
+      path: ""
+      type: "projects"
+    values:
+      layout: "page"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      comments: false                                   # Set to true to enable disqus comments
+
+### Exclude from processing ###
 exclude:
-  - .sass-cache/
-  - .jekyll-cache/
-  - gemfiles/
-  - Gemfile
-  - Gemfile.lock
-  - node_modules/
-  - vendor/bundle/
-  - vendor/cache/
-  - vendor/gems/
-  - vendor/ruby/
-
-destination: ./build
+  - README.md
+  - CONTRIBUTING.md
+  - LICENSE
+  - "*.log"
