--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ### Site Settings ###
-title               : aheilde 
+title               : aheil.de 
 description         : >-
                       I turn coffee :coffee: into code,
                       use tabs over spaces
@@ -31,16 +31,16 @@ author:
 #  facebook          : your_username
   github            : aheil
 # gitlab            : your_username
- instagram         : aheil
+  instagram         : aheil
 # kaggle            : your_username
-  linkedin          : your_username
-  medium            : your_username
+#  linkedin          : your_username
+#  medium            : your_username
 # soundcloud        : your_username
 # spotify           : your_username
 # stackoverflow     : your_user_id
 # tumblr            : your_username.tumblr.com
- twitch            : profaheil
- twitter           : aheil
+  twitch            : profaheil
+  twitter           : aheil
 # vimeo             : your_username
 # youtube           : your_channel_name
 # keybase           : your_username
