--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,41 +6,41 @@ on:
   pull_request:
     branches: [ master ]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Deploy Jekyll Site
-      uses: sujaykundu777/jekyll-deploy-action@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
-        GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#    - uses: actions/checkout@v2
+#    - name: Deploy Jekyll Site
+#      uses: sujaykundu777/jekyll-deploy-action@v1
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
+#        GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
 
-  # https://github.com/foo-software/lighthouse-check-action
-  lighthouse:
-    needs: [build] 
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - run: mkdir /tmp/artifacts
-      - name: Run Lighthouse
-        uses: foo-software/lighthouse-check-action@master
-        with:
-          accessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
-          author: ${{ github.actor }}
-          awsAccessKeyId: ${{ secrets.LIGHTHOUSE_CHECK_AWS_ACCESS_KEY_ID }}
-          awsBucket: ${{ secrets.LIGHTHOUSE_CHECK_AWS_BUCKET }}
-          awsRegion: ${{ secrets.LIGHTHOUSE_CHECK_AWS_REGION }}
-          awsSecretAccessKey: ${{ secrets.LIGHTHOUSE_CHECK_AWS_SECRET_ACCESS_KEY }}
-          branch: ${{ github.ref }}
-          outputDirectory: /tmp/artifacts
-          urls: 'https://aheil.de'
-          sha: ${{ github.sha }}
-          slackWebhookUrl: ${{ secrets.LIGHTHOUSE_CHECK_WEBHOOK_URL }}
-      - name: Upload artifacts
-        uses: actions/upload-artifact@master
-        with:
-          name: Lighthouse reports
-          path: /tmp/artifacts
+#  # https://github.com/foo-software/lighthouse-check-action
+#  lighthouse:
+#    needs: [build] 
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@master
+#      - run: mkdir /tmp/artifacts
+#      - name: Run Lighthouse
+#        uses: foo-software/lighthouse-check-action@master
+#        with:
+#          accessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
+#          author: ${{ github.actor }}
+#          awsAccessKeyId: ${{ secrets.LIGHTHOUSE_CHECK_AWS_ACCESS_KEY_ID }}
+#          awsBucket: ${{ secrets.LIGHTHOUSE_CHECK_AWS_BUCKET }}
+#          awsRegion: ${{ secrets.LIGHTHOUSE_CHECK_AWS_REGION }}
+#          awsSecretAccessKey: ${{ secrets.LIGHTHOUSE_CHECK_AWS_SECRET_ACCESS_KEY }}
+#          branch: ${{ github.ref }}
+#          outputDirectory: /tmp/artifacts
+#          urls: 'https://aheil.de'
+#          sha: ${{ github.sha }}
+#          slackWebhookUrl: ${{ secrets.LIGHTHOUSE_CHECK_WEBHOOK_URL }}
+#      - name: Upload artifacts
+#        uses: actions/upload-artifact@master
+#        with:
+#          name: Lighthouse reports
+#          path: /tmp/artifacts
