--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title               : aheil.de 
 description         : >-
                       Professor :man_teacher: by day , Nerd and Geek :nerd_face: by night
-baseurl             : ""                                # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
+baseurl             : "https://aheil.de"                                # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : aheil/aheil.github.io             # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : aheil/portfolYOU
 
