--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description         : >-
 baseurl             : ""                                # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : aheil/aheil.github.io             # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : aheil/portfolYOU
+url                 : "https://aheil.de"
 
 
 ### Plugins ###
