--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,10 @@ description         : >-
 baseurl             : ""                                # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : aheil/aheil.github.io             # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : aheil/portfolYOU
-url                 : "https://aheil.de"
 
+og_url              : "https://aheil.de"
+og_image            : aheil_square.jpg
+og_description      : Professor by day, Nerd and Geek by night
 
 ### Plugins ###
 plugins:
