--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ nav_exclude:                                            # The following paths ar
   - pages/tags.html
   - pages/404.html
   - pages/index.md
+  - pages/cv.md
 
 
 ### Author Info ###
