teaching section added, navigation updated

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ plugins:
 
 ### Navbar Settings ###
 nav_exclude:                                            # The following paths are excluded from navbar
+  - pages/lectures.html
   - pages/tags.html
   - pages/404.html
   - pages/index.md
