--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ nav_exclude:                                            # The following paths ar
   - pages/404.html
   - pages/index.md
   - pages/cv.md
+  - pages/openthesis.md
 
 
 ### Author Info ###
