--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ nav_exclude:                                            # The following paths ar
   - pages/index.md
   - pages/cv.md
   - pages/openthesis.md
+  - pages/finishedthesis.md
 
 
 ### Author Info ###
