--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ nav_exclude:                                            # The following paths ar
   - pages/cv.md
   - pages/openthesis.md
   - pages/finishedthesis.md
+  - pages/supervising.md
 
 
 ### Author Info ###
