--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ nav_exclude:                                            # The following paths ar
   - pages/finishedthesis.md
   - pages/supervising.md
   - pages/grading.md
+  - pages/edusec.md
 
 
 ### Author Info ###
