--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author:
   image             : aheil.jpg
 #  behance           : your_username
 # dribbble          : your_username
-  email             : inf@aheil.de
+  email             : info@aheil.de
 #  facebook          : your_username
   github            : aheil
 # gitlab            : your_username
