--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ og_url              : "https://aheil.de"
 og_image            : aheil_square.jpg
 og_description      : Professor by day, Nerd and Geek by night
 
+fediverse_creator   : @aheil@chaos.social
+
 ### Plugins ###
 plugins:
   - jemoji
