--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ nav_exclude:                                            # The following paths ar
   - pages/grading.md
   - pages/edusec.md
   - pages/edufaq.md
+  - assets/*.md
 
 
 ### Author Info ###
