--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,9 @@ nav_exclude:                                            # The following paths ar
   - pages/grading.md
   - pages/edusec.md
   - pages/edufaq.md
-  - assets/*.md
+  - assets/eidesstatliche_erklaerung.md
+  - assets/statutory_declaration.md
+
 
 
 ### Author Info ###
