thesis added, insta profile removed

--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ author:
 #  facebook          : your_username
   github            : aheil
 # gitlab            : your_username
-  instagram         : aheil
+#  instagram         : aheil
 # kaggle            : your_username
   linkedin          : aheil
 #  medium            : your_username
